tests/should_fail/bug/snapshot_typecheck.rs
use creusot_std::prelude::*;

pub fn foo() {
    let s = snapshot!(None);
}
